src/App.scss
body {
	background: #ffffff;
	height: 100%;
  width: 100%;
  zoom: 150%;
  display: grid;
  place-items: center;
  position: absolute;
}

ul,li {
	margin: 0;
	padding: 0;
}

h1,h3 {
  color: rgb(0, 0, 0);
  text-align: center;
}

h1 {
  font-size: 60px;
}

footer {
  margin-top: 50px;
}

.content {
  box-shadow: 0px 0px 25px 15px #fff;
  box-sizing: border-box;
  display: flex;
  justify-content: center;
  position: relative;
  height: 232px;
  width: 750px;
}

.abacus-list {
  margin: 0 auto;
  border: solid black 12px;
  border-radius: 25px;
  white-space: nowrap;
}

.ab-item {
  display: inline-table;
}

.up-beads-container {
	height: 57px;
	width: 40px;
  overflow: hidden;
	position: relative;
  display: flex;
  justify-content: center;
  border-bottom-style: none;
}

.down-beads-container {
	height: 139px;
	width: 40px;
  overflow: hidden;
  position: relative;
  display: flex;
  justify-content: center;
  margin: 0px;
  padding: 0px;
}

.up-vertical-pole, .down-vertical-pole {
  border: 2.5px solid black;
  background-color: black;
}

svg {
  position: absolute;
  top: 15px;
}

.upbead {
  top: -4px;
}


#source {
  color: #fff;
  margin-left: 10px;
}

.downbead {
  position: absolute;
  bottom: -4px;
  width: 35px;
  height: 35px;
  background: url('./components/bead.svg');
}

.downbead:nth-child(1) {
	bottom: 78px;
}

.downbead:nth-child(2) {
	bottom: 50.5px;
}

.downbead:nth-child(3) {
	bottom: 23.5px;
}

.up-vertical-pole-center-line {
  height: 12px;
  background-color: black;
  display: flex;
  justify-content: center;
}

.ab-item:nth-child(3) {
  .up-vertical-pole-center-line {
    .up-vertical-pole-center-dot {
      z-index: 15;
      height: 12px;
      width: 12px;
      border-radius: 12px;
      background-color: white;
    } 
  }
}

.ab-item:nth-child(6) {
  .up-vertical-pole-center-line {
    .up-vertical-pole-center-dot {
      z-index: 15;
      height: 12px;
      width: 12px;
      border-radius: 12px;
      background-color: white;
    } 
  }
}

.ab-item:nth-child(9) {
  .up-vertical-pole-center-line {
    .up-vertical-pole-center-dot {
      z-index: 15;
      height: 12px;
      width: 12px;
      border-radius: 12px;
      background-color: white;
    } 
  }
}

.ab-item:nth-child(12) {
  .up-vertical-pole-center-line {
    .up-vertical-pole-center-dot {
      z-index: 15;
      height: 12px;
      width: 12px;
      border-radius: 12px;
      background-color: white;
    } 
  }
}

.ab-item:nth-child(15) {
  .up-vertical-pole-center-line {
    .up-vertical-pole-center-dot {
      z-index: 15;
      height: 12px;
      width: 12px;
      border-radius: 12px;
      background-color: white;
    } 
  }
}

.left-line {
  position: absolute;
  top: 35px;
  left: 29px;
  height: 150px;
  width: 4px;
  background-color: #4d4d4d;
  border-radius: 5px;
}

.top-line {
  position: absolute;
  top: 2px;
  left: 80px;
  height: 4px;
  width: 590px;
  background-color: #4d4d4d;
  border-radius: 5px;
}

.right-line {
  position: absolute;
  top: 35px;
  right: 29px;
  height: 150px;
  width: 4px;
  background-color: #4d4d4d;
  border-radius: 5px;
}

.bottom-line {
  position: absolute;
  bottom: 5px;
  left: 80px;
  height: 4px;
  width: 590px;
  background-color: #4d4d4d;
  border-radius: 5px;
}

h1 {
  display:inline-block;
  vertical-align: middle;
}

header {
  text-align: center;
  vertical-align: middle;
  margin-bottom:50px;
}

.pannel {
  position: absolute;
  top: 250px;
  right: 30px;
  z-index: 10;
  display: grid;
  place-items: center;
  button {
    height: 42px;
    width: 42px;
    display: grid;
    place-items: center;
    border-radius: 50px;
    background: #603813;
    color: #ffffff;
    font-size: 16px;
    transition: .5s;
  }
  .trash-icon {
    position: absolute;
  }
}

@media (max-width: 700px) {
  body {
    transform: rotate(90deg);
    background: #ffffff;
    display: grid;
    place-items: center;
    top: 5%;
    left: 50%;
    position: absolute;
  }

  .content {
    zoom: 135%;
    margin-left: 7px;
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    position: relative;
    height: 233px;
    width: 450px;
  }

  .downbead {
    position: absolute;
    bottom: -4px;
    width: 35px;
    height: 35px;
    background: url('./components/bead.svg');
  }
  
  .downbead:nth-child(1) {
    bottom: 78.5px;
  }
  
  .downbead:nth-child(2) {
    bottom: 51px;
  }
  
  .downbead:nth-child(3) {
    bottom: 23.5px;
  }

  .up-beads-container {
    height: 57px;
    width: 32px;
    overflow: hidden;
    position: relative;
    display: flex;
    justify-content: center;
    border-bottom-style: none;
  }

  .down-beads-container {
    height: 140px;
    width: 32px;
    overflow: hidden;
    position: relative;
    display: flex;
    justify-content: center;
    margin: 0px 0.5px;
    padding: 0px;
  }
  
  .left-line {
    position: absolute;
    top: 35px;
    left: -65px;
    height: 150px;
    width: 4px;
    background-color: #4d4d4d;
    border-radius: 5px;
  }

  .top-line {
    position: absolute;
    top: 2px;
    left: -20px;
    height: 4px;
    width: 490px;
    background-color: #4d4d4d;
    border-radius: 5px;
  }

  .right-line {
    position: absolute;
    top: 35px;
    right: -65px;
    height: 150px;
    width: 4px;
    background-color: #4d4d4d;
    border-radius: 5px;
  }

  .bottom-line {
    position: absolute;
    bottom: 5px;
    left: -20px;
    height: 4px;
    width: 490px;
    background-color: #4d4d4d;
    border-radius: 5px;
  }

  .pannel {
    z-index: 10;
    position: absolute;
    top: 240px;
    right: -60px;
    button {
      height: 40px;
      width: 40px;
      border-radius: 50px;
      background: #603813;
      color: #ffffff;
      font-size: 16px;
      transition: .5s;
    } 
  }
}

